chore: init styles fix

--- a/apps/shell/src/app/layout/sidebar/sidebar.component.html
+++ b/apps/shell/src/app/layout/sidebar/sidebar.component.html
@@ -1,7 +1,11 @@
 <hlm-sidebar collapsible="icon">
     <hlm-sidebar-header>
-        <button hlmSidebarMenuButton>
-            <ng-icon hlm name="lucidePackage" />
+        <button hlmSidebarMenuButton size="lg">
+            <div
+                class="bg-sidebar-primary text-sidebar-primary-foreground flex aspect-square size-8 items-center justify-center rounded-lg"
+            >
+                <ng-icon hlm size="sm" name="lucideGalleryVerticalEnd" />
+            </div>
             <span>LifeOS</span>
         </button>
     </hlm-sidebar-header>
