feat: login form

--- a/apps/shell/src/app/app.html
+++ b/apps/shell/src/app/app.html
@@ -1,2 +1,4 @@
+<div
+    class="pointer-events-none fixed top-0 left-0 z-40 h-[1380px] w-[560px] -translate-y-[350px] -rotate-45 bg-radial-(--spotlight-gradient)"
+></div>
 <router-outlet></router-outlet>
-
