--- a/apps/shell/src/app/layout/layout.component.html
+++ b/apps/shell/src/app/layout/layout.component.html
@@ -3,7 +3,7 @@
     <main hlmSidebarInset>
         <app-header />
         <div class="flex flex-1 flex-col gap-4 p-4 lg:gap-6 lg:p-6">
-            <router-outlet />
+            <router-outlet style="display: none" />
         </div>
     </main>
 </hlm-sidebar-wrapper>
