feat: stop / start and delete search config

--- a/apps/mfe-garage/src/app/parts-sniper/search-config/search-config.component.html
+++ b/apps/mfe-garage/src/app/parts-sniper/search-config/search-config.component.html
@@ -8,7 +8,8 @@
     [configs]="configs()"
     [categories]="categories()"
     [locations]="locations()"
-    (configDeleted)="onDeleteConfig($event)">
+    (configDeleted)="onDeleteConfig($event)"
+    (configUpdated)="onUpdateConfig($event)">
   </lifeos-search-config-list>
 
   <lifeos-search-config-form
